<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/site_info_top"></include>
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >
    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        style="@style/about_info_text_border" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_appname"
	            style="@style/site_info_label"></TextView>
	        
	        <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textIsSelectable="true"
	                style="@style/about_info_text_right"
	                android:text="@string/app_name"
	                ></TextView>	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        style="@style/about_info_text_border" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_version"
	            style="@style/site_info_label"></TextView>
	        
	        <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textIsSelectable="true"
	                style="@style/about_info_text_right"
	                android:text="@string/label_versionValue"
	                ></TextView>	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        style="@style/about_info_text_border" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_update"
	            style="@style/site_info_label"></TextView>
	        
	        <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textIsSelectable="true"
	                style="@style/about_info_text_right"
	                android:text="@string/label_updateValue"
	                ></TextView>	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        style="@style/about_info_text_border" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_author"
	            style="@style/site_info_label"></TextView>
	        
	        <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textIsSelectable="true"
	                style="@style/about_info_text_right"
	                android:text="@string/label_authorValue"
	                ></TextView>	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        style="@style/about_info_text_border" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_site"
	            style="@style/site_info_label"></TextView>
	        
	        <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textIsSelectable="true"
	                style="@style/about_info_text_right"
	                android:text="@string/label_siteValue"
	                ></TextView>	        
	    </LinearLayout>
	    
    
    </LinearLayout>
    

</LinearLayout>