<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/site_info_top"></include>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"  >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            style="@style/site_info_text_border" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sitename"
                style="@style/site_info_label"></TextView>
            
            <EditText android:id="@+id/site_info_sitename"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/site_info_text"
                ></EditText>
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            style="@style/site_info_text_border" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_siteurl"
                style="@style/site_info_label"></TextView>
            
            <EditText android:id="@+id/site_info_siteurl"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/site_info_text"
                ></EditText>
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            style="@style/site_info_text_border" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_encoding"
                style="@style/site_info_label"></TextView>
            
            <Spinner android:id="@+id/site_info_encoding"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:entries="@array/encoding"
                style="@style/site_info_text"
                ></Spinner>
            
        </LinearLayout>
        <Button android:id="@+id/site_info_save" 
            android:text="@string/btn_save"
            style="@style/button_save"
            ></Button>
        
        
    </LinearLayout>
    
</LinearLayout>