<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:paddingTop="6dp"
    android:paddingLeft="8dp"
    android:orientation="vertical">
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">
    
	    <TextView android:id="@+id/task_main_item_taskname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="25sp"
	        android:textColor="#4D5F71"
	        android:textIsSelectable="false" />
	    
	    <TextView android:id="@+id/task_main_item_repeatDay"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="12dp"
	        android:textColor="#888888"
	        android:textIsSelectable="false" />
	    
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
    
	    <LinearLayout
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="3dp"
	            android:orientation="horizontal">
	    
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/label_site_status"
	                style="@style/label_gray" ></TextView>
		        <TextView android:id="@+id/task_main_item_status"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:textIsSelectable="false" />
		    
		        <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="18dp"
	                android:text="@string/label_repeat"
	                style="@style/label_gray" ></TextView>
			    <TextView android:id="@+id/task_main_item_refreshtime"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        style="@style/label_gray"
			        android:textIsSelectable="false" />
			</LinearLayout>   
		    
		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="3dp"
	            android:orientation="horizontal">   
			    
			    <TextView android:id="@+id/task_main_item_info"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        style="@style/label_gray"
			        android:textIsSelectable="false" />
	    
   	 	</LinearLayout>
		    
	    </LinearLayout>
	    
	    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="4dp"
	    android:paddingRight="6dp"
	    android:orientation="horizontal">
		    
	        <ImageView android:id="@+id/task_main_item_edit"
	        android:contentDescription="@string/btn_edit"
	        style="@style/site_info_edit" />
	        
		    <ImageView android:id="@+id/task_main_item_delete"
		        android:contentDescription="@string/btn_delete"
		        style="@style/site_info_delete" />
	        
		</LinearLayout>
    
    </LinearLayout>

</LinearLayout>